--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "goetas/xmldom": "dev-master"
+        "goetas/xmldom": "~1.0"
     },
     "autoload": {
         "files": [
